--- a/MVCWebUI/Views/Products/Index.cshtml
+++ b/MVCWebUI/Views/Products/Index.cshtml
@@ -72,8 +72,12 @@
 				@Html.DisplayFor(model => product.CategoryNameDisplay)
 			</td>
 			<td>
+				<a asp-action="Details" asp-route-id="@product.Id">Details</a>
+
 				@*@Html.ActionLink("Edit", "Edit", new { id = product.Id })*@
 				<a asp-action="Edit" asp-route-id="@product.Id">Edit</a>
+
+				<a asp-action="Delete" asp-route-id="@product.Id">Delete</a>
 			</td>
 		</tr>
 	}
