--- a/MVCWebUI/Views/Products/Create.cshtml
+++ b/MVCWebUI/Views/Products/Create.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-12">
-        <form asp-action="Create" asp-controller="Products" method="post">
+        <form asp-action="Create" asp-controller="Products" method="post" autocomplete="off">
 		@Html.AntiForgeryToken()
             
 			@if (ViewBag.Message is not null)
@@ -50,7 +50,7 @@
             <div class="row mb-3">
                 <label asp-for="ExpirationDate" class="col-2 col-form-label"></label>
 				<div class="col-5">
-					<input asp-for="ExpirationDate" class="form-control" />
+					<input asp-for="ExpirationDate" class="form-control" id="datepicker" type="text"/>
 					<span asp-validation-for="ExpirationDate" class="text-danger"></span>
 				</div>
             </div>
@@ -75,7 +75,26 @@
         </form>
     </div>
 </div>
+@section Scripts{
+	<link href="~/lib/bootstrap-datepicker/css/bootstrap-datepicker3.min.css" rel="stylesheet" />
+	<script src="~/lib/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
+	@*<script src="~/lib/bootstrap-datepicker/locales/bootstrap-datepicker.tr.min.js"></script>*@
+	<script>
+		//$(document).ready(function()
 
+		$(function()
+		{
+		
+			$('#datepicker').datepicker({
+				todayBtn: "linked",
+				//language: "tr",
+				orientation: "top auto",
+				autoclose: true,
+				todayHighlight: true
+			});
+		});
+	</script>
+}
 
 
 
