--- a/MVCWebUI/Views/Categories/Delete.cshtml
+++ b/MVCWebUI/Views/Categories/Delete.cshtml
@@ -2,41 +2,22 @@
 @*Model namespace using directive should be added to _ViewImports.cshtml.*@
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Category";
 }
 
 <h1>@ViewData["Title"]</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Category</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class="col-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class="col-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class="col-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class="col-2">
-            @Html.DisplayNameFor(model => model.Guid)
-        </dt>
-        <dd class="col-10">
-            @Html.DisplayFor(model => model.Guid)
-        </dd>
-    </dl>
     
+    <partial name="_Details" model="Model" />
+
+
     <form asp-action="Delete">
 	@Html.AntiForgeryToken()
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Yes" class="btn btn-danger" />&nbsp;&nbsp;
-        <a asp-action="Index" class="btn btn-success">No</a>
+        <input type="submit" value="Yes" class="btn btn-success" />&nbsp;&nbsp;
+        <a asp-action="Index" class="btn btn-danger">No</a>
     </form>
 </div>
 
