--- a/MVCWebUI/Views/Shared/_Layout.cshtml
+++ b/MVCWebUI/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Stores" asp-action="Index">Stores</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-warning" asp-area="Db" asp-controller="Home" asp-action="Index">Seed Database</a>
                         </li>
                       
