--- a/MVCWebUI/Views/Shared/_Layout.cshtml
+++ b/MVCWebUI/Views/Shared/_Layout.cshtml
@@ -33,6 +33,15 @@
                         </li>
                       
                     </ul>
+
+                    <div class="navbar-text">
+                        <ul class="navbar-nav me-auto">
+                            <li class="nav-item">
+                            <a class="nav-link text-info" asp-area="Account" asp-controller="Users" asp-action="Register">Register</a>
+                        </li>
+                        </ul>
+                    </div>
+
                 </div>
             </div>
         </nav>
