--- a/MVCWebUI/Views/Products/Edit.cshtml
+++ b/MVCWebUI/Views/Products/Edit.cshtml
@@ -59,10 +59,14 @@
 				</div>
             </div>
             <input type="hidden" asp-for="Id" />
-            <div class="row mb-3">
-                <label asp-for="Guid" class="col-2 col-form-label"></label>
-				
-            </div>
+             <div class="row mb-3">
+                    <label asp-for="StoreIds" class="col-2 col-form-label"></label>
+                    <div class="col-5">
+                        <select asp-for="StoreIds" class="form-select" asp-items="ViewBag.Stores">
+                        </select>
+                        <span asp-validation-for="StoreIds" class="text-danger"></span>
+                    </div>
+                </div>
             <div class="row mb-3">
 				<div class="offset-2 col-5">
 					<input type="submit" value="Save" class="btn btn-dark" />
