--- a/MVCWebUI/Views/Categories/Index.cshtml
+++ b/MVCWebUI/Views/Categories/Index.cshtml
@@ -2,14 +2,16 @@
 @*Model namespace using directive should be added to _ViewImports.cshtml.*@
 
 @{
-    ViewData["Title"] = "Categories";
+	ViewData["Title"] = "Categories";
 }
 
 <h1>@ViewData["Title"]</h1>
-
-<p>
-    <a asp-action="Create">Create New Category</a>
-</p>
+@if (User.IsInRole("Admin"))
+{
+	<p>
+		<a asp-action="Create">Create New Category</a>
+	</p>
+}
 @if (TempData["Message"] is not null)
 {
 	if (TempData["Message"].ToString().EndsWith("!"))
@@ -22,41 +24,54 @@
 	}
 }
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
+	<thead>
+		<tr>
+			<th>
+				@Html.DisplayNameFor(model => model.Name)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Description)
+			</th>
 			<th>
 				@Html.DisplayNameFor(model => model.ProductCountDisplay)
 			</th>
-           
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-		@foreach (var item in Model) {
-				<tr>
-					<td>
-						@Html.DisplayFor(modelItem => item.Name)
-					</td>
-					<td>
-						@Html.DisplayFor(modelItem => item.Description)
-					</td>
-					<td>
-						@Html.DisplayFor(modelItem => item.ProductCountDisplay)
-					</td>
-					<td>
-						<a asp-action="Details" asp-route-id="@item.Id">Details</a>&nbsp;|&nbsp;
-						<a asp-action="Edit" asp-route-id="@item.Id">Edit</a>&nbsp;|&nbsp;
-						<a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-					</td>
-				</tr>
+
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
+		@foreach (var item in Model)
+		{
+			<tr>
+				<td>
+					@Html.DisplayFor(modelItem => item.Name)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.Description)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.ProductCountDisplay)
+				</td>
+				<td>
+					@if (User.Identity.IsAuthenticated)
+					{
+
+						<a asp-action="Details" asp-route-id="@item.Id">Details</a>
+
+						@if (User.IsInRole("Admin"))
+						{
+							@:&nbsp;|&nbsp;
+							<a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+							@:&nbsp;| &nbsp;
+							<a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+						}
+
+					}
+
+				</td>
+			</tr>
 		}
-    </tbody>
+	</tbody>
 </table>
 
 
