--- a/MVCWebUI/Views/Home/Welcome.cshtml
+++ b/MVCWebUI/Views/Home/Welcome.cshtml
@@ -1,4 +1,11 @@
 ﻿<div class="text-center">
     <h1 class="display-4">Welcome</h1>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <p>Welcome To ETrade @User.Identity.Name.</p>
+    }
+    else
+    {
     <p>Welcome to ETrade.</p>
+    }
 </div>
