--- a/MVCWebUI/Views/Shared/_Layout.cshtml
+++ b/MVCWebUI/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Stores" asp-action="Index">Stores</a>
                         </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="Report" asp-controller="Home" asp-action="Index">Report</a>
+                            </li>
                         }
                         <li class="nav-item">
                             <a class="nav-link text-warning" asp-area="Db" asp-controller="Home" asp-action="Index">Seed Database</a>
