--- a/MVCWebUI/Areas/Report/Views/Home/Index.cshtml
+++ b/MVCWebUI/Areas/Report/Views/Home/Index.cshtml
@@ -10,34 +10,68 @@
 
 
 <form asp-action="Index" method="get">
-	<div class="row mb-3">
-		<div class="col-2">
-			<label asp-for="Filter.CategoryId"></label>
-		</div>
-		<div class="col-4">
-			<select class="form-select" asp-items="Model.Categories" asp-for="Filter.CategoryId">
-				<option value="">--All Categories--</option>
-			</select>
-		</div>
-		<div class="col-2">
-			<label asp-for="Filter.ProductName"></label>
-		</div>
-		<div class="col-4">
-				<input asp-for="Filter.ProductName" class="form-control" placeholder="Enter name..."/>
-		</div>
-		</div>
-	
 	<div class="row">
-		<div class="offset-2 col-10">
-			<button type="submit" class="btn btn-dark">Search</button>
-			&nbsp;&nbsp;
-			<a asp-action="Index" class="btn btn-outline-dark">Clear</a>
+		<div class="col2">
+			@await Component.InvokeAsync("Categories")
+		</div>
+		<div class="col-10">
+
+
+			<div class="row mb-3">
+				<div class="col-2">
+					<label asp-for="Filter.CategoryId"></label>
+				</div>
+				<div class="col-4">
+					<select class="form-select" asp-items="Model.Categories" asp-for="Filter.CategoryId">
+						<option value="">--All Categories--</option>
+					</select>
+				</div>
+				<div class="col-2">
+					<label asp-for="Filter.ProductName"></label>
+				</div>
+				<div class="col-4">
+					<input asp-for="Filter.ProductName" class="form-control" placeholder="Enter name..." />
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-2">
+					<label asp-for="Filter.ExpirationDateBegin"></label>
+				</div>
+				<div class="col-4">
+					<div class="input-group">
+						<input asp-for="Filter.ExpirationDateBegin" class="form-control datetimepicker" type="text" />
+						<span class="input-group-text">-</span>
+						<input asp-for="Filter.ExpirationDateEnd" class="form-control datetimepicker" type="text" />
+					</div>
+				</div>
+				<div class="col-2">
+					<label asp-for="Filter.StoreIds"></label>
+				</div>
+				<div class="col-4">
+					<select class="form-select" asp-items="Model.Stores" asp-for="Filter.StoreIds" multiple>
+					</select>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="offset-2 col-10">
+					<button type="submit" class="btn btn-dark">Search</button>
+					&nbsp;&nbsp;
+					<a asp-action="Index" class="btn btn-outline-dark">Clear</a>
+				</div>
+			</div>
+
 		</div>
 	</div>
 	<hr />
 	@if (Model.Report is not null && Model.Report.Count() > 0)
 	{
+
 		<p class="text-success">@Model.Report.Count() records found</p>
+
+		//<div style="overflow-y: auto;height: 300px">
+
 		<table class="table">
 			<thead>
 				<tr>
@@ -64,36 +98,45 @@
 					</th>
 				</tr>
 			</thead>
-			<tbody>
-				@foreach (var item in Model.Report)
-				{
-					<tr>
-						<td>
-							<b>@(++no)</b>
-						</td>
-						<td>
-							@Html.DisplayFor(modelItem => item.StoreName)
-						</td>
-						<td>
-							@Html.DisplayFor(modelItem => item.CategoryName)
-						</td>
-						<td>
-							@Html.DisplayFor(modelItem => item.ProductName)
-						</td>
-						<td>
-							@Html.DisplayFor(modelItem => item.UnitPrice)
-						</td>
-						<td>
-							@Html.DisplayFor(modelItem => item.StockAmount)
-						</td>
-						<td>
-							@Html.DisplayFor(modelItem => item.ExpirationDate)
-						</td>
-
-					</tr>
-				}
-			</tbody>
 		</table>
+
+		<div style="overflow-y: auto;height: 300px">
+			<table class="table">
+				<tbody>
+					@foreach (var item in Model.Report)
+					{
+						<tr>
+							<td>
+								<b>@(++no)</b>
+							</td>
+							<td>
+								@Html.DisplayFor(modelItem => item.StoreName)
+							</td>
+							<td>
+								<a href="#" title="@item.CategoryDescription">
+									@Html.DisplayFor(modelItem => item.CategoryName)
+								</a>
+							</td>
+							<td>
+								<a href="#" title="@item.ProductDescription">
+									@Html.DisplayFor(modelItem => item.ProductName)
+								</a>
+							</td>
+							<td>
+								@Html.DisplayFor(modelItem => item.UnitPrice)
+							</td>
+							<td>
+								@Html.DisplayFor(modelItem => item.StockAmount)
+							</td>
+							<td>
+								@Html.DisplayFor(modelItem => item.ExpirationDate)
+							</td>
+
+						</tr>
+					}
+				</tbody>
+			</table>
+		</div>
 
 	}
 	else
@@ -101,3 +144,17 @@
 		<p class="text-info">No records found</p>
 	}
 </form>
+
+@section Scripts{
+	<link href="~/plugins/datetimepicker/jquery.datetimepicker.min.css" rel="stylesheet" />
+	<script src="~/plugins/datetimepicker/jquery.datetimepicker.full.min.js"></script>
+
+	<script>
+		$(function () {
+			$(".datetimepicker").datetimepicker({
+				timepicker: true,
+				format: 'm/d/Y'
+			});
+		});
+	</script>
+}
