--- a/MVCWebUI/Views/Products/Create.cshtml
+++ b/MVCWebUI/Views/Products/Create.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-12">
-        <form asp-action="Create" asp-controller="Products" method="post" autocomplete="off">
+        <form asp-action="Create" asp-controller="Products" method="post" autocomplete="off" enctype="multipart/form-data">
             @Html.AntiForgeryToken()
 
             @if (ViewBag.Message is not null)
@@ -69,6 +69,12 @@
                     <select asp-for="StoreIds" class="form-select" asp-items="ViewBag.Stores">
                     </select>
                     <span asp-validation-for="StoreIds" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row mb3">
+                <label asp-for="Image" class="col-2 col-form-label"></label>
+                <div class="col-5">
+                    <input type="file" name="uploadedImage" class="form-control" id="Image" />
                 </div>
             </div>
             <div class="row mb-3">
