--- a/MVCWebUI/Views/Products/Details.cshtml
+++ b/MVCWebUI/Views/Products/Details.cshtml
@@ -7,6 +7,12 @@
 
 <h1>@ViewData["Title"]</h1>
 
+
+@if(TempData["Message"] != null)
+{
+    <p class="text-success">@TempData["Message"]</p>
+}
+
 <div>
     <h4>Product</h4>
     <hr />
@@ -52,6 +58,15 @@
         </dt>
         <dd class="col-10">
             @Html.Raw(Model.StoreNamesDisplay)
+        </dd>
+        <dt class="col-2">
+            @Html.DisplayNameFor(model => model.ImgSrcDisplay)
+        </dt>
+        <dd class="col-4">
+            @if(Model.ImgSrcDisplay is not null)
+            {
+                <img src="@Model.ImgSrcDisplay" class="img-fluid" />
+            }
         </dd>
     </dl>
 </div>
