--- a/MVCWebUI/Views/Products/Edit.cshtml
+++ b/MVCWebUI/Views/Products/Edit.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-12">
-        <form asp-action="Edit" autocomplete="off">
+        <form asp-action="Edit" autocomplete="off" enctype="multipart/form-data">
 		@Html.AntiForgeryToken()
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="row mb-3">
@@ -59,6 +59,17 @@
 				</div>
             </div>
             <input type="hidden" asp-for="Id" />
+
+			<div class="row mb-3">
+				<label asp-for="Image" class="col-2 col-form-label"></label>
+				<div class="col-5">
+					<input type="file" name="uploadedImage" class="form-control" id="Image" />
+				</div>
+				<div class="col-4">
+					<a asp-action="DeleteImage" asp-route-id="@Model.Id"><i class="bi bi-trash"></i></a>
+				</div>
+			</div>
+			
              <div class="row mb-3">
                     <label asp-for="StoreIds" class="col-2 col-form-label"></label>
                     <div class="col-5">
